--- a/pkg/templates/layout.gohtml
+++ b/pkg/templates/layout.gohtml
@@ -88,6 +88,10 @@
           flex-direction: column;
         }
 
+        .nowrap {
+          white-space: nowrap;
+        }
+
         h1 {
           margin-inline: 0;
           margin-block: 16px;
